apps/infra/traefik/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:Zz+tt/szkPKh0tCnJ+h+fsoAcRTwpdTKu/rM20BR/Ys=,iv:tGXSlyQSabOINSL1P4bYZkup4/w9dKsrQW/GdIvHvBg=,tag:hHEb+OHq9vGBAmhBAly+ew==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
    name: traefik-extname
spec:
    externalName: ENC[AES256_GCM,data:5S8qTFvwq6/kQZ7OeImDozEM9ddApigj6IU0Pj8yr10=,iv:YLdC8bVXRoNVVPL6sXb/+mVUtwy4LdqVExT+ZSbQFI0=,tag:C0AxZyAgfO7QNQ/ZF4BhAg==,type:str]
    sessionAffinity: None
    type: ExternalName
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBONjVqUjMrN0d4YURWQXp4
[...]
            ZKinMxbxhlV/SshaVfE32W7vpChHghoyiAXTvUs+z8z08PXMUkExsA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-03T13:44:01Z"
    mac: ENC[AES256_GCM,data:yWDRffR38ciDO0FFBZClRCmpBG1fgOAq+yL3Ui/2D45iqInHUgjvLwzMC3ery5bQ5B0OQ7/6ElsVmHZhrtJcOlPFHObXhMdeVzUwPKRYlipzjDrS1zmEEw6HFhpkeyvbqOWVeJL2D1xlJg2Du1yTEnbxXFyjlJs4FZTF9Xi3UbE=,iv:bDGC9fuYlSKjaAuuG3mgsP6tBCAYFsR9V+773qG8L4M=,tag:OUiWoCpUknD9iI8CVMWfFw==,type:str]
    pgp:
        - created_at: "2024-06-20T13:38:45Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//YuAjU66icK2Lgd3V8F0Nh0AISOtMXD3AnB/pV4Ax4o7n
[...]
            =gd84
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
