apps/infra/traefik/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: proxmox-proxy
  name: proxmox-proxy
  namespace: traefik
spec:
  externalName: 192.168.40.18
  type: ExternalName
  ports:
  - name: websecure
    port: 8006
    targetPort: 8006
  selector:
    app.kubernetes.io/instance: proxmox-proxy
    task: proxmox-proxy
