apps/infra/traefik/resources/ingressroute.production.sops.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:Pgk6QLWX567i8Lo3M5fBIzXfSXI4j9lM,iv:xjxrGRE6U+vZia7/Fdk8vPPmXpwUCGp6Pmr0A/QS4kg=,tag:zqtxCUf90LgS0U603quyFA==,type:str]
        kubernetes.io/ingress.class: traefik-external
    name: dashboard
    namespace: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:WP79aAbbEB0Ps29v0pV5wsjSG4HQ+pzYl+RMZ33Tbd3vifcBfg1HpGxv5o5yDDuADhoRUXvGfMZ1T2ZfUq+0jPFSR6wimZ6b5/OrZDbOlYyPMgdNZxfoAAb4T2U=,iv:opRBIuwRSXu1/JxHCN4eLsMxvI7MDyGZ3XWiOsyQHCI=,tag:fheaXa7XIYMb092DGVhXyw==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - name: api@internal
              kind: TraefikService
    tls:
        domains:
            - main: ENC[AES256_GCM,data:RxdI47Lg4LBg1vyKNWgRNMmXafRzu+Vc,iv:T1BMShoJxY5i4AdMs67UXGO4gFCltw17SRsTSZg+Mlg=,tag:KjE8HDHHzf+ZghIEeGuVyQ==,type:str]
              sans:
                - ENC[AES256_GCM,data:uo8xlZkQetHVYZStQu0jdZx+/fh3/9awCw==,iv:zi6TT40RktjgBYe08O0HTx1j/xdIJUl/eelhygLi/qg=,tag:a218OoayGumywPZc4VfWNg==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: traefik-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2024-08-21T19:58:21Z"
    mac: ENC[AES256_GCM,data:qGn/Apaw1r4ABjthhsT9kzWcGFLKv5X2gyRmWmDGalMIgGDW/w0G+eAbqfkeeBkQxRbYP5XGNylCF+jaGLf84rau/5QqVadsnKYMjpTEop2yQeQCRHnj0R6Wi6IP3QOkC6b+3O1I8DDCeP89J5qaM1zdDgGc8uB9GPPEX6+r2lU=,iv:guPJzRNeXtu//+QB2olWKSgko6ulDmHrxFCFIEyGGss=,tag:Tag5f4aJLH2iYZDD46QdSA==,type:str]
    pgp:
        - created_at: "2024-06-25T21:16:26Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//Y5XZpzPMsI+ya65OsKSMA8yKrLmxSO8LKumLZ6pxlUqy
[...]
            =wGKa
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
