apps/infra/traefik/resources/ingressroute.sops.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: traefik.infra.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: traefik.infra.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/target: infra.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: dashboard
    namespace: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`traefik.infra.anotherlife.org.pl`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - name: api@internal
              kind: TraefikService
    tls:
        domains:
            - main: infra.anotherlife.org.pl
              sans:
                - .infra.anotherlife.org.pl
        options:
            name: tls-ver13
            namespace: traefik
        secretName: traefik-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3eU5DQlJjMGdhcDZVc2ZM
[...]
            dMQLx4FhFhKAugjczpPJq5/cTD7YKJk7kSx2gwaI/DKXG6HCL9Udmg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-02T16:54:52Z"
    mac: ENC[AES256_GCM,data:Eg66eqY9x72wt+TiATQ39O+q5egL0c8m+IFK48gZNqMHd5zFMYLmY/94GIr+LD31yY7i4rRCeZuWHyOFuYxe6cU12PtwguDZQo6v8C+cWRf92w5XhaDXCHM6kPw8g00XcGbIX6BJ06SpnI2MGwuZ2hSKYFU23GNmq3al1bjnCuo=,iv:VOJ+QGJQwo23dRvMnzHjkMuchLp7PoEHHzKo77LlGPI=,tag:TvyOgkCLXSqzhhIz8m0mlg==,type:str]
    pgp:
        - created_at: "2024-10-02T16:54:52Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+N9R76g3kUva2iMblleT/euEt5GnNR7dD4eBaQVHWjq8O
[...]
            =KKhE
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
