apps/infra/traefik/resources/ingressroute.staging.proxmox.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: proxmox.infra.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: proxmox.infra.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/target: infra.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: proxmox-staging
    namespace: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`proxmox.infra.anotherlife.org.pl`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
        - name: proxmox
          port: 8006
          scheme: https
          passHostHeader: true
    tls:
        domains:
            - main: infra.anotherlife.org.pl
              sans:
                - .infra.anotherlife.org.pl
        options:
            name: tls-ver13
            namespace: traefik
        secretName: proxmox-cf-staging
