apps/infra/traefik/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: traefik.infra.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:H3CVXC4yTHeo+nZ3YQm4r4/2ONGtYXinyEzEDx0/uzg=,iv:IMIQoMwlHc4wa1/3IWReZVpEzSUOiVnbz85ncOfrTSE=,tag:5/90Xna4RApVR4PtZPYKzQ==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:lG+RF0VtVKwIfY7P2lN3lMutNCa+2OwH,iv:0bEmKcpjU76aafCldP+Jo7qOocVwN1GtcuoxgL4ba6w=,tag:noDzLOZzkyPpEgi9YCb+OA==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: dashboard-staging
    namespace: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:Lz5zAJ7eluRG8cQGzKsd26xwgLiC2xgvX5tSzunlafT5HAkntsAQa/iVX3AoB35aEmM1iMBpSDKNRK0YYkKOIz6wWj2MqBV8u9BdxoK2wsqNGWvNhDZKCtVGWqc=,iv:UidDcuH4VTKF4vc57eXJLxmnEQBMLJWUgCc8W5gt4Lc=,tag:p9PmogkutMngYacA9ihm8g==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - name: api@internal
              kind: TraefikService
    tls:
        domains:
            - main: ENC[AES256_GCM,data:ldn4v8eYG9Po1uPuDWs7L/TuLGNZG65/,iv:m5hM6hGTPBjfXUnvuULJd7xrLuOzB2gSetSIWbfm5Bs=,tag:uFIaKy/2I+6BnDwQ0Iaarw==,type:str]
              sans:
                - ENC[AES256_GCM,data:+dg0EKgWAZFuXe+mF0Xk8/XZecA7h/f9ew==,iv:OagvoMRWqox8Zn2bwC01cZ/Km17FF+Z36Ultgt+yvng=,tag:Cb7wPX37Cq26kNAQj9Is1Q==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: traefik-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmVXp3b21wUXRSbWNHRUU5
[...]
            OR9z4d12YQnMGLmHQ3g69OosdtV45hGRyERcuyRRAgTp3dpSmwTJJQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-09-13T14:05:27Z"
    mac: ENC[AES256_GCM,data:Nzrb3kbEwzeW0tx6DB9ih4hQu9vLHink02QSlwtb7A5TD0GRgWGQSmucQmgbIITwG57NZvr7MXsCcIUyenTLxcGQ/StM6Vo5rLcs8/X0jVDxE7WbJln/R9CzkDFgaWAEAsiK1HjGAB4hmX3GUVN5CQ15r9zKtFqp/Cau3j1rPWc=,iv:y0qviwDAQr+ZU+iLiqMVnLxqHejCS7HNaANby0DpsOQ=,tag:c+/0bc9SXLAGNlJaSlvyIQ==,type:str]
    pgp:
        - created_at: "2024-06-21T22:54:02Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//XdNRVwLNrjrNslFGv04hyMf1s1IFIQRyFu/7yicY5IO3
[...]
            =Qf0W
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
